--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,6 +12,7 @@
         "utility": "cpp",
         "vector": "cpp",
         "algorithm": "c",
-        "iostream": "cpp"
+        "iostream": "cpp",
+        "__bit_reference": "cpp"
     }
 }
